102_demo-dep.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: demo-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo
      environment: wcp-demo-1
  template:
    metadata:
      labels:
        app: demo
        environment: wcp-demo-1
    spec:
      containers:
      - name: nginx-container
        image: nginx
        ports:
        - containerPort: 80
