102_demo-deploy.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: demo-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
      - name: nginx-container
        image: nginx
        ports:
        - containerPort: 80
