404_demo-ss_with-cns-tanzu.yml
---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: nginx-ss
spec:
  serviceName: demo-svc
  replicas: 3
  selector:
    matchLabels:
      app: cns-demo
      environment: cns-demo-1
  template:
    metadata:
      labels:
        app: cns-demo
        environment: cns-demo-1
    spec:
      containers:
      - name: nginx-container
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: demo-pvc
          mountPath: /usr/share/nginx/html
  volumeClaimTemplates:
  - metadata:
      name: demo-pvc
      annotations:
        volume.beta.kubernetes.io/storage-class: "st-policy-nfs-vsk-01"
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 2Gi
