101_demo-svc.yml
---
kind: Service
apiVersion: v1
metadata:
  name: demo-svc
  labels:
    app: demo
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: demo
