201_kuard-svc.yml
---
kind: Service
apiVersion: v1
metadata:
  name: kuard-svc
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: demo-kuard
