401_cns-demo-svc.yml
---
kind: Service
apiVersion: v1
metadata:
  name: cns-demo-svc
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: cns-demo
