301_demo-nw-policy.yml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
   name: demo-nw-policy
spec:
   podSelector:
      matchLabels:
         app: demo
   policyTypes:
   - Ingress
   ingress:
   - from:
     - ipBlock:
          cidr: 172.20.0.0/16
     - ipBlock:
          cidr: 172.22.0.0/16
     - ipBlock:
          cidr: 192.168.0.0/16
     - podSelector:
          matchLabels:
            app: jumpbox
     ports:
#     - protocol: TCP
#       port: 80
#     - protocol: TCP
#       port: 8080
