302_demo-nw-policy_hol.yml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
   name: np-allow-all
spec:
   podSelector: {}
   ingress:
   - {}
   egress:
   - {}
   policyTypes:
   - Ingress
   - Egress
